--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,42 @@
+absl-py==2.3.0
 appnope==0.1.4
 asttokens==3.0.0
 certifi==2025.4.26
+chex==0.1.89
 comm==0.2.2
 contourpy==1.3.2
 cycler==0.12.1
 debugpy==1.8.14
 decorator==5.2.1
+etils==1.12.2
 executing==2.2.0
+flax==0.10.6
 fonttools==4.58.0
+fsspec==2025.5.1
+holisticai==1.0.14
+humanize==4.12.3
+importlib_resources==6.5.2
 ipykernel==6.29.5
 ipython==9.2.0
 ipython_pygments_lexers==1.1.1
+jax==0.6.1
+jaxlib==0.6.1
 jedi==0.19.2
 joblib==1.5.0
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 kiwisolver==1.4.8
+markdown-it-py==3.0.0
 matplotlib==3.10.3
 matplotlib-inline==0.1.7
+mdurl==0.1.2
+ml_dtypes==0.5.1
+msgpack==1.1.0
 nest-asyncio==1.6.0
 numpy==2.2.6
+opt_einsum==3.4.0
+optax==0.2.4
+orbax-checkpoint==0.11.13
 packaging==25.0
 pandas==2.2.3
 parso==0.8.4
@@ -27,22 +44,34 @@ pexpect==4.9.0
 pillow==11.2.1
 platformdirs==4.3.8
 prompt_toolkit==3.0.51
+protobuf==6.31.1
 psutil==7.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pyarrow==20.0.0
+pybind11==2.13.6
 Pygments==2.19.1
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 pytz==2025.2
+PyYAML==6.0.2
 pyzmq==26.4.0
+rich==14.0.0
 scikit-learn==1.6.1
 scipy==1.15.3
 seaborn==0.13.2
+setuptools==80.9.0
+simplejson==3.20.1
 six==1.17.0
 stack-data==0.6.3
+tensorstore==0.1.75
 threadpoolctl==3.6.0
+toolz==1.0.0
 tornado==6.5
 traitlets==5.14.3
+treescope==0.1.9
+typing_extensions==4.13.2
 tzdata==2025.2
 ucimlrepo==0.0.7
 wcwidth==0.2.13
+zipp==3.22.0
