--- a/requirements.txt
+++ b/requirements.txt
@@ -22,11 +22,13 @@ ipython_pygments_lexers==1.1.1
 jax==0.6.1
 jaxlib==0.6.1
 jedi==0.19.2
+Jinja2==3.1.6
 joblib==1.5.0
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 kiwisolver==1.4.8
 markdown-it-py==3.0.0
+MarkupSafe==3.0.2
 matplotlib==3.10.3
 matplotlib-inline==0.1.7
 mdurl==0.1.2
